--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GitHub repository search</title>
-    <script type="module" crossorigin src="/assets/index.233919dd.js"></script>
+    <script type="module" crossorigin src="/gh-repo-search/assets/index.233919dd.js"></script>
   </head>
   <body>
     <div id="root"></div>
